--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@
 body {
   @apply bg-bg;
 }
+.carded {
+  @apply bg-white text-gray-700
+   min-h-[10rem] ml-4 mr-4 justify-center items-center
+    shadow-lg shadow-slate-400;
+}
 .card {
   @apply bg-white text-gray-700
     w-80 min-h-[10rem] ml-4 mr-4 justify-center items-center
