--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,12 @@ body {
 .card {
   @apply bg-white text-gray-700 gap-1
     w-80 min-h-[10rem] mx-4 justify-center items-center
-    shadow-lg shadow-slate-400;
+    shadow-lg shadow-slate-400 mt-4;
+}
+.card-dashboard {
+  @apply bg-white text-gray-700 gap-1
+    w-80 min-h-[10rem] mx-4 justify-center items-center
+    shadow-lg shadow-slate-400 mt-7;
 }
 .cardPayment {
   @apply bg-white text-gray-700
